# Polyfit

./: CMakeLists.txt
demo-boost/: CMakeLists.txt
demo-eigen/: CMakeLists.txt
